--- a/twitterFrontend/src/app/components/main/menu/menu-item/menu-item.component.html
+++ b/twitterFrontend/src/app/components/main/menu/menu-item/menu-item.component.html
@@ -1,6 +1,8 @@
-<div class="inline-block items-center p-2 hover:bg-neutral-800 rounded-full" tabindex="0">
+<p-toast position="bottom-center" preventOpenDuplicates="true"/>
+<div class="inline-block items-center p-2 hover:bg-neutral-800 rounded-full" tabindex="0" (click)="routeTo()"
+     (keydown.enter)="routeTo()">
   <div class="flex flex-row gap-5 items-center">
     <span [ngClass]="iconClass" class="text-3xl"></span>
-    <span class="text-xl hidden xl:block mr-4">{{ title }}</span>
+    <span class="text-xl hidden xl:block mr-4" [ngClass]="{'text-blue-500' : isActiveRoute()}">{{ title }}</span>
   </div>
 </div>
