--- a/twitterFrontend/src/app/components/main/menu/menu.component.html
+++ b/twitterFrontend/src/app/components/main/menu/menu.component.html
@@ -13,7 +13,9 @@
       <app-menu-item
         (keydown.enter)="notYetImplementedToast()"
         (click)="notYetImplementedToast()"
-        [title]=item.title [iconClass]=item.iconClass />
+        [title]=item.title [iconClass]=item.iconClass
+        [routeToPath]="item.routeToPath"
+      />
     }
   </div>
   <div class="mt-2 max-w-60"
