add search bar to info component (only stylistic purpose)

--- a/twitterFrontend/src/app/components/main/main.component.html
+++ b/twitterFrontend/src/app/components/main/main.component.html
@@ -3,8 +3,8 @@
   <div class="w-full lg:max-w-xl">
     <router-outlet />
   </div>
-  <div class="lg:w-1/6 lg:block border hidden border-gray-300 border-opacity-20 sticky top-0 h-screen">
+  <app-info class="lg:w-1/6 lg:block border hidden border-gray-300 border-opacity-20 sticky top-0 h-screen">
     Info
-  </div>
+  </app-info>
 </div>
 
