--- a/twitterFrontend/src/app/components/main/info/info.component.html
+++ b/twitterFrontend/src/app/components/main/info/info.component.html
@@ -1,5 +1,46 @@
-<div class="w-full flex fle-col p-2">
+<div class="w-full flex flex-col p-2 gap-4">
   <div class="w-full flex flex-row items-center">
-    <input pInputText type="text" size="large" placeholder="Suchen" fluid="true" class="rounded-2xl" />
+    <input pInputText type="text" size="large" placeholder="Suchen" fluid="true" class="rounded-3xl"/>
+  </div>
+  <div class="w-full flex flex-col border border-gray-500 border-opacity-25 rounded-3xl p-4">
+    <span class="text-xl">Premium abonnieren</span>
+    <span class="text-sm">Hol dir ein Abonnement, wenn du daran interessiert bist Elon Musk noch mehr Geld in den Rachen zu schieben! Unterstütze Ihn damit die Demokratien auf der Welt zu unterwandern und rechtsradikale Parteien zu unterstützen!</span>
+    <p-button label="Abonnieren" class="mt-4" severity="help" disabled="true" rounded="true"/>
+  </div>
+  <div class="w-full flex flex-col gap-4 border border-gray-500 border-opacity-25 rounded-3xl p-4">
+    <div>
+      <span class="text-xl">Wem folgen?</span>
+    </div>
+    <div class="flex flex-col gap-4">
+      <div class="flex flex-row items-center justify-between rounded-full">
+        <div class="flex gap-1 items-center" tabindex="0">
+          <p-avatar icon="pi pi-user" size="normal" shape="circle"/>
+          <span class="hidden xl:block">GregoryPeck</span>
+        </div>
+        <div>
+          <p-button label="Folgen" rounded="true" size="small" disabled="true"/>
+        </div>
+      </div>
+
+      <div class="flex flex-row items-center justify-between rounded-full">
+        <div class="flex gap-1 items-center" tabindex="0">
+          <p-avatar icon="pi pi-user" size="normal" shape="circle"/>
+          <span class="hidden xl:block">Jonas</span>
+        </div>
+        <div>
+          <p-button label="Folgen" rounded="true" size="small" disabled="true"/>
+        </div>
+      </div>
+
+      <div class="flex flex-row items-center justify-between rounded-full">
+        <div class="flex gap-1 items-center" tabindex="0">
+          <p-avatar icon="pi pi-user" size="normal" shape="circle"/>
+          <span class="hidden xl:block">ElonMusk</span>
+        </div>
+        <div>
+          <p-button label="Folgen" rounded="true" size="small" disabled="true"/>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
