refactored a lot in frontend and add some responsivness and overflow handler

--- a/twitterFrontend/src/app/components/main/feed/feed.component.html
+++ b/twitterFrontend/src/app/components/main/feed/feed.component.html
@@ -1,4 +1,4 @@
-<div class="min-w-full">
+<div class="min-w-full min-h-screen h-auto border-r border-l border-gray-300 border-opacity-25">
   <div>
     <p-tabs value="0" class="">
       <p-tablist class="flex sticky top-0 opacity-90">
