--- a/twitterFrontend/src/app/components/main/menu/menu.component.html
+++ b/twitterFrontend/src/app/components/main/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col xl:w-72 max-w-72 h-screen border-r border-gray-300 border-opacity-20">
+<div class="flex flex-col xl:w-72 min-h-screen max-w-72">
   <div class="w-fit hover:bg-neutral-800 rounded-full p-2" tabindex="0"
        (keydown.enter)="notYetImplementedToast()"
        (click)="notYetImplementedToast()"
