--- a/twitterFrontend/src/app/components/main/status/status.component.html
+++ b/twitterFrontend/src/app/components/main/status/status.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex flex-col">
+<div class="w-full flex flex-col min-h-screen h-auto border-r border-l border-gray-300 border-opacity-25">
   <app-route-back-header title="Post"></app-route-back-header>
   <div>
     @if (parent) {
